// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test ShowablePasswordInput should render correctly 1`] = `
<div
  className="showable-password-input"
>
  <input
    id="password-input"
    onKeyDown={[Function]}
    placeholder="Password"
    type="password"
  />
  <img
    onClick={[Function]}
    src="img/right-panel/icon-eyeopen.svg"
  />
</div>
`;

exports[`test ShowablePasswordInput should render correctly 2`] = `
<div
  className="showable-password-input"
>
  <input
    id="password-input"
    onKeyDown={[Function]}
    placeholder="Password"
    type="text"
  />
  <img
    onClick={[Function]}
    src="img/right-panel/icon-eyeclose.svg"
  />
</div>
`;
